# SharedOrStaticLibChain

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: BuildRunWithCMakePresets.yml  BuildRunWithoutCMakePresets.yml  UseArtifact.yml
CMakeUtils/FindOrFetch/: FindDoxySphinx.cmake  FindSphinx.cmake
CMakeUtils/Handy/: CleanDocs.cmake  RenameLatexOutputDoc.cmake  SelectCompilerViaFlagIfNotUsingCMakePresets.cmake
Code/Driver/: CMakeLists.txt
Code/Driver/hdr/: Driver.hpp
Code/Driver/src/: Driver.cpp  MainDriver.cpp
Code/SharedOrStaticLib1/: CMakeLists.txt
Code/SharedOrStaticLib1/hdr/: SharedOrStaticLib1.hpp
Code/SharedOrStaticLib1/include/: AutoGeneratedSharedOrStaticLib1Exports.hpp  SharedOrStaticLib1Api.hpp
Code/SharedOrStaticLib1/src/: SharedOrStaticLib1.cpp  SharedOrStaticLib1Api.cpp
Code/SharedOrStaticLib2/: CMakeLists.txt
Code/SharedOrStaticLib2/hdr/: SharedOrStaticLib2.hpp
Code/SharedOrStaticLib2/include/: AutoGeneratedSharedOrStaticLib2Exports.hpp  SharedOrStaticLib2Api.hpp
Code/SharedOrStaticLib2/src/: SharedOrStaticLib2.cpp  SharedOrStaticLib2Api.cpp
Code/SharedOrStaticLib3/: CMakeLists.txt
Code/SharedOrStaticLib3/hdr/: SharedOrStaticLib3.hpp
Code/SharedOrStaticLib3/include/: AutoGeneratedSharedOrStaticLib3Exports.hpp  SharedOrStaticLib3Api.hpp
Code/SharedOrStaticLib3/src/: SharedOrStaticLib3.cpp  SharedOrStaticLib3Api.cpp
Docs/: CMakeLists.txt  DoxyfileSettingsCommon.cmake  DoxyfileSettingsForDoxygen.cmake  DoxyfileSettingsForSphinx.cmake  conf.py  index.rst
