#[==================================================[
Doxygen
#]==================================================]
find_package(Doxygen)

if(DOXYGEN_FOUND)

    include(${CMAKE_CURRENT_LIST_DIR}/DoxyfileSettingsCommon.cmake)
    include(${CMAKE_CURRENT_LIST_DIR}/DoxyfileSettingsForDoxygen.cmake)
    include(${CMAKE_CURRENT_LIST_DIR}/DoxyfileSettingsForSphinx.cmake)

else()
    message(WARNING "Doxygen is not installed or cannot be found; documentation will not be generated :`(")
endif()

#[==================================================[
DoxySphinx
#]==================================================]
set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/CMakeUtils/FindOrFetch ${CMAKE_MODULE_PATH})

find_package(DoxySphinx REQUIRED)

if(DoxySphinx_FOUND)

    set(SPHINX_INPUT ${CMAKE_CURRENT_SOURCE_DIR})
    set(SPHINX_OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/DocsOut/sphinx)

    add_custom_target(docs-doxysphinx 
        # COMMAND ${CMAKE_COMMAND} -E echo "${DOXYSPHINX_EXECUTABLE} build ${DOXYSPHINX_INPUT} ${DOXYSPHINX_OUTPUT} ${DOXYGEN_OUTPUT_DIRECTORY}/html"
        COMMAND ${DOXYSPHINX_EXECUTABLE} build ${SPHINX_INPUT} ${SPHINX_OUTPUT} ${doxygenDirForSphinx}/html
        COMMENT "Doxysphinx: generating *.rst files from Doxygen's *.html files"
    )

    add_dependencies(docs-doxysphinx docs-sphinxNotDoxygen)
    
else()
    message(WARNING "DoxySphinx is not installed or cannot be found; documentation will not be generated :`(")
endif()

#[==================================================[
Sphinx
#]==================================================]
find_package(Sphinx REQUIRED)

if(Sphinx_FOUND)

#[===[
        Generate conf.py file from conf.in.py replacing "@VARIABLES@" 
        with the values of their corresponding VARIABLES as defined in this scripts
        up to this point! Any variables defined after configure_file will NOT be picked up!
    configure_file(
        ${CMAKE_CURRENT_SOURCE_DIR}/conf.in.py 
        ${CMAKE_CURRENT_SOURCE_DIR}/conf.py 
        @ONLY
    )
#]===]

    add_custom_target(docs-sphinx 
        # COMMAND ${CMAKE_COMMAND} -E echo "${SPHINX_EXECUTABLE} -b html ${SPHINX_INPUT} ${SPHINX_OUTPUT} '--keep-going' '-j' 'auto'"
        COMMAND ${SPHINX_EXECUTABLE} -b html ${SPHINX_INPUT} ${SPHINX_OUTPUT}
        COMMENT "Sphinx: generating documentation"
    )

    add_custom_target(docs-sphinx-open
        COMMAND ${SPHINX_OUTPUT}/index.html
        VERBATIM
    )

    add_dependencies(docs-sphinx docs-doxysphinx)

else()
    message(WARNING "Sphinx is not installed or cannot be found; documentation will not be generated :`(")
endif()

add_custom_target(docs-clean
    COMMAND ${CMAKE_COMMAND} 
        -D dir1=${CMAKE_CURRENT_SOURCE_DIR}/DocsOut 
        # -D dir2=${CMAKE_CURRENT_BINARY_DIR} 
        -P ${CMAKE_SOURCE_DIR}/CMakeUtils/Handy/CleanDocs.cmake
    COMMENT	"Removing autogenerated documentation directories"
    VERBATIM
)
